defined start script

--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "asset-flow",
+  "name": "asset-manager",
   "version": "1.0.0",
   "main": "index.js",
   
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon server/server.js"
+    "dev": "nodemon server/server.js",
+    "start": "node server/server.js"
   },
   "keywords": [],
   "author": "",
